--- a/QueuePublisher/pom.xml
+++ b/QueuePublisher/pom.xml
@@ -13,6 +13,12 @@
 			<artifactId>amqp-client</artifactId>
 			<version>5.6.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 
 
 	</dependencies>
